crates/ghss_website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghss-website
spec:
  selector:
    matchLabels:
      app: ghss-website
  replicas: 1
  template:
    metadata:
      labels:
        app: ghss-website
    spec:
      containers:
        - name: website
          image: frigus02/ghss-website
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /
              port: 8888
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 200Mi
